--- a/newsletters/example/style-articles.css
+++ b/newsletters/example/style-articles.css
@@ -1,3 +1,11 @@
 #article-1 {
-    grid: span 2 / span 1;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 1;
+}
+
+#article-2 {
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
 }
