--- a/newsletters/example/style-articles.css
+++ b/newsletters/example/style-articles.css
@@ -1,11 +1,24 @@
 #article-1 {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 1;
+    grid-row: 1 / 3;
+    grid-column: 1 / 3;
 }
 
 #article-2 {
-    grid-row: 2 / 3;
-    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+    grid-column: 1 / 3;
+}
+
+#article-3 {
+    grid-row: 3 / 4;
+    grid-column: 3 / 5;
+}
+
+#article-4 {
+    grid-row: 1 / 3;
+    grid-column: 4 / 5;
+}
+
+#article-5 {
+    grid-row: 1 / 3;
+    grid-column: 3 / 4;
 }
