--- a/newsletter-next/app/ui/global.css
+++ b/newsletter-next/app/ui/global.css
@@ -7,3 +7,12 @@ body {
     color: white;
 }
 
+@layer base {
+    h1 {
+      @apply text-5xl;
+    }
+    h2 {
+      @apply text-3xl;
+    }
+  }
+
