--- a/newsletters/style.css
+++ b/newsletters/style.css
@@ -1,23 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap");
 
 body {
-    background-color: darkslategrey;
-    color: white;
+	background-color: darkslategrey;
+	color: white;
 
-    font-family: fredoka;
-}
-
-#grid {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 0.75fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    height: 80vh;
-    width: 90vw;
-    margin: 5vw;
-    gap: 2vw;
-}
-
-.grid-item {
-    background-color: red;
-    padding: 1vh;
+	font-family: fredoka;
 }
